tests/ui/nll/issue-57280-1-flipped.stderr
error: lifetime may not live long enough
  --> $DIR/issue-57280-1-flipped.rs:17:9
   |
LL | fn foo<'a>(x: &'static u32) {
   |        -- lifetime `'a` defined here
LL |     match x {
LL |         <() as Foo<'a>>::C => { }
   |         ^^^^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

